applications/booksonic-air/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: booksonic-air
  name: booksonic-air
spec:
  ports:
    - name: "4040"
      port: 4040
      targetPort: 4040
  selector:
    app: booksonic-air
